// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Organisms/CampaignSecondary With image 1`] = `
<div
  class="rpl-campaign-secondary"
>
  <div
    class="rpl-campaign-secondary__row"
  >
    <div
      class="rpl-campaign-secondary__left"
    >
      <div
        class="rpl-campaign-secondary__content"
      >
        <img
          alt=""
          class="rpl-responsive-image rpl-campaign-secondary__image rpl-responsive-image--fit-cover"
          height="340"
          src="https://placehold.it/580x340"
          style="object-position: 50.00% 50.00%; font-family: 'object-fit: cover; object-position: 50.00% 50.00%;';"
          width="580"
        />
         
        <!---->
      </div>
    </div>
     
    <div
      class="rpl-campaign-secondary__right"
    >
      <div
        class="rpl-campaign-secondary__content"
      >
        <h2
          class="rpl-campaign-secondary__title"
        >
          Secondary campaign headline
        </h2>
         
        <div
          class="rpl-campaign-secondary__summary"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporar incident  incididunt ut labore et dolore magna aliqua. Ut enim ad minim niam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
        </div>
      </div>
       
      <a
        class="rpl-link rpl-button rpl-button--primary"
        data-print-url="#"
        href="#"
      >
        <span
          class="rpl-link__inner"
        >
          Call to action
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Organisms/CampaignSecondary With video 1`] = `
<div
  class="rpl-campaign-secondary"
>
  <div
    class="rpl-campaign-secondary__row"
  >
    <div
      class="rpl-campaign-secondary__left"
    >
      <div
        class="rpl-campaign-secondary__content"
      >
        <!---->
         
        <div
          class="rpl-embedded-video rpl-campaign-secondary__video"
        >
          <div
            class="rpl-embedded-video-iframe-container"
          >
            <iframe
              allowfullscreen="allowfullscreen"
              class="rpl-embedded-video-frame"
              src="https://www.youtube.com/embed/bSlnfyGTiss"
            />
          </div>
           
          <div
            class="rpl-embed-video__link"
          >
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--view rpl-icon--color_primary"
              overflow="visible"
              style="width: 15px; height: 11px;"
              viewBox="0 0 15 11"
            >
              <path
                d="M7.5 0C4.09 0 1.18 2.195 0 5.294c1.18 3.099 4.09 5.294 7.5 5.294s6.32-2.195 7.5-5.294C13.82 2.195 10.91 0 7.5 0zm0 8.824c-1.882 0-3.41-1.582-3.41-3.53 0-1.948 1.528-3.53 3.41-3.53 1.882 0 3.41 1.582 3.41 3.53 0 1.948-1.528 3.53-3.41 3.53zm0-5.648c-1.132 0-2.045.946-2.045 2.118S6.368 7.412 7.5 7.412s2.045-.946 2.045-2.118S8.632 3.176 7.5 3.176z"
              />
               
            </svg>
             
            <a
              class="rpl-link rpl-text-link"
              data-print-url="#"
              href="#"
            >
              <span
                class="rpl-link__inner"
              >
                <span
                  class="rpl-text-label"
                >
                  <span>
                    View transcript
                  </span>
                </span>
              </span>
            </a>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="rpl-campaign-secondary__right"
    >
      <div
        class="rpl-campaign-secondary__content"
      >
        <h2
          class="rpl-campaign-secondary__title"
        >
          Secondary campaign headline
        </h2>
         
        <div
          class="rpl-campaign-secondary__summary"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporar incident  incididunt ut labore et dolore magna aliqua. Ut enim ad minim niam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
        </div>
      </div>
       
      <a
        class="rpl-link rpl-button rpl-button--primary"
        data-print-url="#"
        href="#"
      >
        <span
          class="rpl-link__inner"
        >
          Call to action
        </span>
      </a>
    </div>
  </div>
</div>
`;
